# unnamed-game-01

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  main.cpp
include/: game.hpp
src/: game.cpp  game.hpp
src/core/: resource_manager.cpp  resource_manager.hpp
src/core/ecs/: component.cpp  component.hpp  ecs.hpp  entity.cpp  entity.hpp  event.hpp
src/core/ecs/components/: texture.cpp  texture.hpp  transform.cpp  transform.hpp
src/core/ecs/systems/: component.cpp  component.hpp  event.hpp
